--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -4,17 +4,18 @@ server.ssl.key-store=classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password=openvidu
 server.ssl.key-store-type=JKS
 server.ssl.key-alias=openvidu-selfsigned
-
 logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
 
 DOTENV_PATH=.
 
-DOMAIN_OR_PUBLIC_IP=
-OPENVIDU_SECRET=
+DOMAIN_OR_PUBLIC_IP=192.168.53.71
+OPENVIDU_SECRET=JD123
 CERTIFICATE_TYPE=selfsigned
 HTTPS_PORT=443
-KMS_URIS=["ws://localhost:8888/kurento"]
+KMS_URIS=["ws://116.196.100.224:8888/kurento"]
+#分布式 kms 部署
+#KMS_URIS=["ws://116.196.100.224:8888/kurento","ws://116.196.101.197:8888/kurento"]
 
 OPENVIDU_CDR=false
 OPENVIDU_CDR_PATH=/opt/openvidu/cdr
@@ -34,15 +35,29 @@ OPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/custom-layout
 OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT=120
 OPENVIDU_RECORDING_COMPOSED_URL=
 
-OPENVIDU_STREAMS_VIDEO_MAX_RECV_BANDWIDTH=1000
-OPENVIDU_STREAMS_VIDEO_MIN_RECV_BANDWIDTH=300
-OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
-OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
+##从客户端发送到OpenVidu Server的最大视频带宽，以kbps为单位。0表示不受约束
+OPENVIDU_STREAMS_VIDEO_MAX_RECV_BANDWIDTH=0
+##从客户端发送到OpenVidu Server的最小视频带宽，以kbps为单位。0表示不受约束
+OPENVIDU_STREAMS_VIDEO_MIN_RECV_BANDWIDTH=300
+##从OpenVidu服务器发送到客户端的最大视频带宽，以kbps为单位。0表示不受约束
+OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=0
+##从OpenVidu服务器发送到客户端的最小视频带宽，以kbps为单位。0表示不受约束
+OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
+##非活动会话的垃圾收集器运行的频率。这有助于清理已通过REST API初始化的会话（也许已经为它们创建了令牌）但没有用户连接的会话。
+# 默认为900秒（15分钟）。0禁用非活动会话垃圾收集器
 OPENVIDU_SESSIONS_GARBAGE_INTERVAL=900
+##非活动会话的垃圾收集器必须删除该活动会话的最小时间（秒）。默认为3600s（1小时）。
+# 如果禁用了非活动会话垃圾收集器（属性OPENVIDU_SESSIONS_GARBAGE_INTERVAL设置为0），则将忽略此属性
 OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
 
 COTURN_REDIS_IP=127.0.0.1
 COTURN_REDIS_DBNAME=0
 COTURN_REDIS_PASSWORD=turn
 COTURN_REDIS_CONNECT_TIMEOUT=30
+
+
+knife4j.production=false
+#knife4j.basic.enable=false
+#knife4j.basic.username=jd
+#knife4j.basic.password=jd123
